fixed white space

--- a/css/other.css
+++ b/css/other.css
@@ -8,12 +8,13 @@ td {
     color: black;
     font-size: 3.5vh;
     text-align: center;
-    max-height: 6vh;
+    height: 6vh;
 }
 
 #logo{
     height: 6vh;
 }
+
 #result{
     text-align: center;
     background-color: rgb(84, 203, 224);
